fix:(header align , add box-shodow)

--- a/css/style.css
+++ b/css/style.css
@@ -32,23 +32,12 @@ a {
 ul {
     list-style: none;
     margin: 0 var(--base-space);
-    text-align: center;
-    vertical-align: top;
-    line-height: 1;
-    /** degug
-    border: 1px dashed red; **/
+   
 }
 li {
     display: inline-block;
-    padding: var(--padding-nav);
+    /*border: 1px dashed red; */
 
-    
-
-    /** debug
-    background: #ccc;
-    border: 1px solid yellow; 
-    **/
-    
 }
 
 /** Utils **/
@@ -68,6 +57,10 @@ li {
   border: none;
   color: white;
   cursor: pointer;
+}
+.button:hover{
+  opacity: 0.7;
+  
 }
 .col-30{
   width: 30%;
@@ -89,10 +82,7 @@ li {
 
 /** Debug **/
 
-.debug-footer {
-  min-height: var(--footer-height);
-  background-color: goldenrod;
-}
+/***/
 
 
 
@@ -112,32 +102,37 @@ li {
   background-color: white;
   color: #6C6C6C;
 }
-.header .nav-bar{
-  flex-grow: 1;
-}
+
 .nav-bar{
+  flex-grow: 1;
+  height: var(--header-height);
   display: flex;
   justify-content: space-between;
-  align-items: center; 
+  align-items: center;
 }
-.logo-small{
-  width: 120px;
-}
-
-.nav-bar-left ul li{ 
-  margin-right: var(--base-space);
-}
-.nav-bar-right ul li{
+.nav-bar ul li {
+  height: var(--header-height);
+  vertical-align: middle;
   margin-right: 0;
   margin-left: var(--base-space);
+  padding: 0;
 }
-.nav-bar-left ul li div{
-  position: relative;
-  
+
+.nav-bar ul li a{
+  display: block;
+  line-height: var(--header-height);
+  padding: 0 10px;  
 }
-.logo-small{ 
-  position: absolute;
-  top: var(--padding-nav);
+.btn{
+  line-height: var(--header-height);
+
+}
+.logo-small{
+  padding-top: 25px;
+}
+/***** Nav Hover  *****/
+.nav-bar li:hover a{
+  box-shadow: rgba(0, 0, 0, 0.35) 19px -27px 7px -26px inset;
 }
 
 
@@ -154,8 +149,7 @@ li {
   display: flex;
   min-height: 620px;
   background-color:#B4D0E7 ;
-  /**degug**/
-  border: 1px solid black;
+
 }
 .jumbo-container{
   flex-grow:0;
@@ -200,12 +194,12 @@ li {
   padding: var(--base-space);
 }
 .subscribe{ 
-  padding: var(--base-space);
+  margin-top: var(--base-space);
   height: 190px;
   line-height: 40px;
 }
 .subscribe  i{
-  line-height: 120px;
+  line-height: 80px;
   font-size: 40px;
   
 }
